<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_WinchControl" Id="{c215fff2-3620-4717-8b9a-c2db7b9e9f4a}">
    <Declaration><![CDATA[TYPE ST_WinchControl :
STRUCT
	length: LREAL;
	length_t: LREAL;
	length_tt: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>