<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_FeedbackWinch" Id="{f8a13742-9093-4ade-b9f4-e5139af1cbbf}">
    <Declaration><![CDATA[TYPE ST_FeedbackWinch :
STRUCT
	length: LREAL;
	length_t: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>