<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_TxHmiStewart" Id="{a97cdde8-9053-4a79-afcc-923bad4b3e3d}">
    <Declaration><![CDATA[TYPE ST_TxHmiStewart :
STRUCT
	status : DINT;
	eta : ARRAY [0..5] OF REAL;
	eta_ref : ARRAY [0..5] OF REAL;
	eta_sim : ARRAY [0..5] OF REAL;
	cyl : ARRAY [0..5] OF REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>