<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_TxHmiWinch" Id="{ae894732-388f-49a5-a442-5bb07b53ffa7}">
    <Declaration><![CDATA[TYPE ST_TxHmiWinch :
STRUCT
	status : DINT := 0;
	l : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>