<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <POU Name="FB_WinchInterface" Id="{04fd987b-6b6d-4a7c-b1e1-6e43123e7fac}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_WinchInterface
VAR_INPUT
	enable : BOOL := FALSE;
	reset : BOOL := FALSE;
	stopp : BOOL := FALSE;
	
	mode : UINT := 0;
	control : ST_WinchControl;

	
END_VAR
VAR_OUTPUT
	active : BOOL := FALSE;
	
	feedback : ST_FeedbackWinch;
END_VAR
VAR
	// HMI feedback	
	pTxHmi : POINTER TO ST_TxHmiWinch;
	
	// MC2 Functions
	axis : AXIS_REF;
	fbPower : MC_Power;
	fbReset : MC_Reset;
	fbExtSetPointGenEnable : MC_ExtSetPointGenEnable;
	fbExtSetPointGenDisable : MC_ExtSetPointGenDisable;
	fbReadParameterSet : MC_ReadParameterSet;
	stAxisParameterSet : ST_AxisParameterSet;
	
	// Setpoint generation
	Ts : LREAL := 0.005;
	
	omega : LREAL := 1.0;
	beta : LREAL := 1.0;
	
	
	l : LREAL := 0.0;
	l_t : LREAL := 0.0;
	l_tt : LREAL := 0.0;
	direction : DINT := 0;
	
	aMax : LREAL := 0.0;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Update axis data
axis();

// Read parameter set
fbReadParameterSet(
	Axis := axis,
	Parameter := stAxisParameterSet,
	Execute := FALSE
);
fbReadParameterSet(
	Axis := axis,
	Parameter := stAxisParameterSet,
	Execute := TRUE
);
	

// Generate trajectory from input filter
l_tt := control.l_tt + 2*beta*omega*(control.l_t - l_t) + omega*omega*(control.l - l);
l_t := l_t + l_tt*Ts;
l := l + l_t*Ts;


// Get direction
direction := GetDirection(l, l_t, l_tt);

// Feed setpoints to acis interface
MC_ExtSetPointGenFeed(
	Axis := axis,
	Position := l,
	Velocity := l_t,
	Acceleration := l_tt,
	Direction := direction
);

// Check operation mode
IF fbPower.Status THEN
	CASE mode OF
	0 : 
		// Settled
		
		// Copy feedback values to setpoint generator
		l := axis.NcToPlc.ActPos;
		l_t := axis.NcToPlc.ActVelo;
		l_tt := axis.NcToPlc.ActAcc;
		
		// Disable external setpoint
		DisableExtSetPoint();
	1 : 
		// Enagaged
		
		// Enable external setpoint
		EnableExtSetPoint();
		
	2 : 
		// Enagaged - Fast
		
		// Enable external setpoint
		EnableExtSetPoint();
	
	END_CASE
END_IF

// Set power status for winch
IF enable THEN
	// Power on the drive
	fbPower(
		Axis := axis,
		Enable := TRUE,
		Enable_Positive := TRUE,
		Enable_Negative := TRUE
	);
ELSE
	mode := 0;
	IF NOT fbExtSetPointGenDisable.Busy AND fbExtSetPointGenDisable.Done THEN
		// Power off the drive
		fbPower(
			Axis := axis,
			Enable := FALSE,
			Enable_Positive := FALSE,
			Enable_Negative := FALSE
		);
	END_IF
END_IF

(* TODO: Fix This
// Reset Drive
IF reset THEN
	fbReset(
		Axis := axis,
		Execute := TRUE
	);
	IF NOT fbReset.Busy AND fbReset.Done THEN
		reset := FALSE;
	END_IF
ELSE
	fbReset(
		Axis := axis,
		Execute := FALSE
	);
END_IF
*)



]]></ST>
    </Implementation>
    <Method Name="DisableExtSetPoint" Id="{8625365a-3f23-4e76-ba3a-d36439744fe2}">
      <Declaration><![CDATA[METHOD PRIVATE DisableExtSetPoint : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbExtSetPointGenDisable(
	Axis := axis,
	Execute := TRUE
);
fbExtSetPointGenEnable(
	Axis := axis,
	Execute := FALSE
);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="EnableExtSetPoint" Id="{d86b78de-9d3a-4053-bd82-f21f9d22062b}">
      <Declaration><![CDATA[METHOD PRIVATE EnableExtSetPoint : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbExtSetPointGenDisable(
	Axis := axis,
	Execute := FALSE
);
fbExtSetPointGenEnable(
	Axis := axis,
	Execute := TRUE
);]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_init" Id="{4ef8ab5f-4b43-4ec7-898b-623c39afb859}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	// Init variables
	_pTxHmi : POINTER TO ST_TxHmiStewart;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Ensure Power of axis is disbaled at startup
fbPower(
	Axis := axis,
	Enable := FALSE,
	Enable_Positive := FALSE,
	Enable_Negative := FALSE
);

fbExtSetPointGenDisable(
	Axis := axis,
	Execute := FALSE
);
fbExtSetPointGenEnable(
	Axis := axis,
	Execute := FALSE
);]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetDirection" Id="{9b772473-0894-4878-884a-86e9d42d9fdc}">
      <Declaration><![CDATA[METHOD PRIVATE GetDirection : DINT
VAR_INPUT
	pos : LREAL;
	vel : LREAL;
	acc : LREAL;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Set setpoint direction
IF vel = 0.0 AND acc = 0.0 THEN
	// Standstill situation
	GetDirection := 0;
ELSIF vel >= 0.0 THEN
	// Positive motion
	GetDirection := 1;
ELSE
	// Negative motion
	GetDirection := -1;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="UpdateHMI" Id="{66797478-8570-421d-ad5d-4d9d457815e9}">
      <Declaration><![CDATA[METHOD PRIVATE UpdateHMI : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Update HMI variables]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_WinchInterface">
      <LineId Id="823" Count="0" />
      <LineId Id="825" Count="0" />
      <LineId Id="1054" Count="1" />
      <LineId Id="1084" Count="1" />
      <LineId Id="1088" Count="0" />
      <LineId Id="1087" Count="0" />
      <LineId Id="1083" Count="0" />
      <LineId Id="1056" Count="0" />
      <LineId Id="1061" Count="3" />
      <LineId Id="1107" Count="0" />
      <LineId Id="1059" Count="0" />
      <LineId Id="835" Count="0" />
      <LineId Id="811" Count="0" />
      <LineId Id="837" Count="1" />
      <LineId Id="1093" Count="0" />
      <LineId Id="842" Count="1" />
      <LineId Id="841" Count="0" />
      <LineId Id="812" Count="0" />
      <LineId Id="802" Count="0" />
      <LineId Id="796" Count="5" />
      <LineId Id="794" Count="0" />
      <LineId Id="944" Count="0" />
      <LineId Id="943" Count="0" />
      <LineId Id="1032" Count="0" />
      <LineId Id="945" Count="0" />
      <LineId Id="958" Count="0" />
      <LineId Id="1037" Count="1" />
      <LineId Id="1015" Count="2" />
      <LineId Id="1014" Count="0" />
      <LineId Id="1018" Count="0" />
      <LineId Id="976" Count="0" />
      <LineId Id="959" Count="0" />
      <LineId Id="995" Count="0" />
      <LineId Id="1029" Count="0" />
      <LineId Id="1039" Count="0" />
      <LineId Id="1036" Count="0" />
      <LineId Id="1028" Count="0" />
      <LineId Id="1033" Count="2" />
      <LineId Id="1040" Count="2" />
      <LineId Id="994" Count="0" />
      <LineId Id="947" Count="0" />
      <LineId Id="897" Count="0" />
      <LineId Id="829" Count="0" />
      <LineId Id="795" Count="0" />
      <LineId Id="729" Count="0" />
      <LineId Id="757" Count="0" />
      <LineId Id="742" Count="4" />
      <LineId Id="741" Count="0" />
      <LineId Id="773" Count="0" />
      <LineId Id="1114" Count="1" />
      <LineId Id="751" Count="5" />
      <LineId Id="750" Count="0" />
      <LineId Id="1116" Count="0" />
      <LineId Id="725" Count="0" />
      <LineId Id="1163" Count="0" />
      <LineId Id="1052" Count="0" />
      <LineId Id="1051" Count="0" />
      <LineId Id="1067" Count="0" />
      <LineId Id="1074" Count="2" />
      <LineId Id="1072" Count="0" />
      <LineId Id="1089" Count="0" />
      <LineId Id="1082" Count="0" />
      <LineId Id="1090" Count="0" />
      <LineId Id="1077" Count="0" />
      <LineId Id="1079" Count="2" />
      <LineId Id="1078" Count="0" />
      <LineId Id="1069" Count="0" />
      <LineId Id="484" Count="0" />
      <LineId Id="559" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="27" Count="0" />
    </LineIds>
    <LineIds Name="FB_WinchInterface.DisableExtSetPoint">
      <LineId Id="6" Count="6" />
      <LineId Id="5" Count="0" />
      <LineId Id="16" Count="0" />
    </LineIds>
    <LineIds Name="FB_WinchInterface.EnableExtSetPoint">
      <LineId Id="6" Count="6" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_WinchInterface.FB_init">
      <LineId Id="17" Count="5" />
      <LineId Id="16" Count="0" />
      <LineId Id="24" Count="3" />
      <LineId Id="23" Count="0" />
      <LineId Id="30" Count="2" />
      <LineId Id="28" Count="0" />
    </LineIds>
    <LineIds Name="FB_WinchInterface.GetDirection">
      <LineId Id="9" Count="9" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_WinchInterface.UpdateHMI">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>